# TC_RISCV

./: .gitignore  CMakeLists.txt  README  README.md  指令集  结构
host_tools/: CMakeLists.txt
parking/: Makefile
parking/v2/: .hex  Makefile  parking.S  parking.c  parking.dis.S  parking.dis.hex  parking.hex
riscv/: CMakeLists.txt  README.md  alu.v  cache.v  core.v  dual_load_memory.v  executor.v  instruction_decoder.v  kernel.c  memory.v  pc.v  regfile.v  riscv.v  trap.v
test/: Makefile
test/RV32M_test/: Makefile
test/rv32i_asm/: Makefile  input.s  output.hex  rv32i_asm  rv32i_asm.c
test/rv32i_test/: Makefile  input.s  key.s  output.hex  rv32i_asm  rv32i_asm.c  test1.hex  test1.s
test/rv32i_test/v2/: start.S  start.dis.S
test/可以运行的测试/显示hello,world!/: start.S  start.dis.S  start.hex
test/可以运行的测试/获取键盘输入,映射键码后输出ascii/: start.S  start.dis.S  start.hex
游戏存档文件夹/: README.md
游戏存档文件夹/Turing Complete/schematics/architecture/riscvTXF/key_map/: 3203245654799916043.rom  circuit.data  circuit_backup_0.data  circuit_backup_1.data  circuit_backup_2.data  circuit_backup_3.data  circuit_backup_4.data
游戏存档文件夹/Turing Complete/schematics/architecture/riscvTXF/riscv/: circuit.data  circuit_backup_0.data  circuit_backup_1.data  circuit_backup_2.data  circuit_backup_3.data  circuit_backup_4.data
游戏存档文件夹/Turing Complete/schematics/architecture/riscvTXF/riscv_2/: circuit.data  circuit_backup_0.data  circuit_backup_1.data  circuit_backup_2.data  circuit_backup_3.data  circuit_backup_4.data
第一版废案/: README  glue.c  程序
(+22 files in other folders)
